<resources>
    <string name="app_name">Keystroke Recognition for Android</string>
    <string name="login_button_text">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_text_view_text"><u>Sign Up</u></string>
    <string name="training_text_view_text">Type your Password</string>
    <string name="train_button_text">Train</string>
    <string name="add_button_text">Add</string>
    <string name="test_button_text">Test</string>
    <string name="extract_features_item_text">Extract Features</string>
    <string name="extract_button_text">Extract</string>
    <string name="positive_radio_button_text">POSITIVE</string>
    <string name="negative_radio_button_text">NEGATIVE</string>
    <string name="radio_group_info_message">Choose POSITIVE if desirable user will type the password or NEGATIVE in any other case.</string>
    <string name="extract_features_text_view_text">(add .arff in file name)</string>
    <string name="extract_features_exit_text_hint">ARFF File Name</string>
    <string name="show_password_check_box_text">Show Password</string>
</resources>
